--- a/lab1/lab0.acod.adoc
+++ b/lab1/lab0.acod.adoc
@@ -30,7 +30,7 @@ image::1.png[]
 
 Рисунок 1 - Репозиторий Labs в GitHub
 
-б) Сздать папку в репозитории lab1
+б) Создать папку в репозитории lab1
 
 Результат изображен на рисунке 2.
 
