--- a/lab1/lab0.adoc
+++ b/lab1/lab0.adoc
@@ -25,8 +25,7 @@
 
 Результат изображен на рисунке 1.
 
-image::1.png[]
-
+image::lab1/1.png
 Рисунок 1 - Репозиторий Labs в GitHub
 
 б) Сздать папку в репозитории lab1
