--- a/lab1/lab0.adoc
+++ b/lab1/lab0.adoc
@@ -37,13 +37,13 @@ image::2car.png[]
 
 Рисунок 2 - Папка lab1 в репозитории
 
-в) Создать в папке Lab1 проект Lab1 С++ с main с настройками для микроконтроллера STM32F411RC
+в) Создать в папке Lab1 проект Lab1 С++ с main с настройками для микроконтроллера STM32F411RE
 
 Результат изображен на рисунке 3.
 
 image::3.png[]
 
-Рисунок 3 - Создание проекта с настройками для микроконтроллера STM32F411RC
+Рисунок 3 - Создание проекта с настройками для микроконтроллера STM32F411RE
 
 г) Сделать программу которая считает сумму двух char чисел, попробовать сложить несколько разных числе скажем 1 и -6, 250 и 10, Вывести результат в Terminal I/O. Объяснить результат.
 
