--- a/lab10/lab10.adoc
+++ b/lab10/lab10.adoc
@@ -1,5 +1,25 @@
 :imagesdir: Images
-:figure-caption: Рисунок
+:toc:
+:toc-title: Оглавление
+
+[.text-center]
+МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО ОБРАЗОВАНИЯ РОССИЙСКОЙ ФЕДЕРАЦИИ +
+Федеральное государственное автономное образовательное учреждение высшего образования +
+«Южно-Уральский государственный университет» +
+(национальный исследовательский университет) +
+Высшая школа электроники и компьютерных наук +
+Кафедра «Информационно-измерительная техника»
+
+[.text-center]
+
+Отчет по лабораторной работе №10
+
+[.text-right]
+Выполнил: +
+студент группы КЭ-415 +
+Леонов В.А. +
+Платонов Д.В.
+
 :toc:
 :toc-title: ОГЛАВЛЕНИЕ:
 
