--- a/lab10/lab10.adoc
+++ b/lab10/lab10.adoc
@@ -31,7 +31,7 @@
 === 1. Включение светодиодов
 Для начала дадим определение прерывания.
 
-image::img1.png[]
+image::img1.jpg[]
 
 Для настройки таймера необходимо подключить библиотеки для регистров таймера и прерываний.
 
