--- a/lab10/lab10.adoc
+++ b/lab10/lab10.adoc
@@ -77,12 +77,7 @@ int __low_level_init(void)
 Согласно регистру *RCC* переключение на частоты таймера *TIM2* происходит в 0 бите (рисунок 1).
 
 .Регистр *RCC_APB1ENR*
-image::img.png[]
-
-Далее записываем в регистр *TIM2_PSC* значение тактовой частоты счетчика с помощью переменной *TimerPrescaler*, которая была определена раньше.
-
-.Регистр *TIMx_PSC*
-image::img2.png[]
+image::img2.jpg[]
 
 Листинг кода определения тактовой частоты.
 [source,c]
