--- a/lab 11/lab11.adoc
+++ b/lab 11/lab11.adoc
@@ -37,3 +37,15 @@
 радиолокация - несколько милисекунд;
 складской учет - несколько секунд;
 управление производством - несколько минут.
+Принцип работы и запуска задачи похож на принцип работы прерыванния представлен на рисунке 1.
+
+image::1.jpg[]
+
+В ОСРВ вместо прерывний используется задачи, которые вызываются планировщиком каждый раз по прерыванию симного таймера (например в 1 мс) или при непосредственном вызове планировщика.
+Каждый раз планировщик пробегается по списку задач и выбирает задачу готовую к работе (рисунок 2).
+
+image::2.jpg[]
+
+В кооперативной многозадачности планировщик смотрит, завершена ли текущая задача и готова ли следующая (с большим приоритетом).
+В вытесняющей планировщик смотрит, готова ли более высокоприоритеная задача, если да, он прерывает работе менее приоритетной залачи и вызывает задачу с большим приоритетом.
+Планировщик озаботится тем, чтобы у каждой задачи все сохранялось и запоминалось: текущее положение, стек, переменные, регистры.
