--- a/lab 11/lab11.adoc
+++ b/lab 11/lab11.adoc
@@ -46,6 +46,6 @@ image::1.jpg[]
 
 image::2.jpg[]
 
-В кооперативной многозадачности планировщик смотрит, завершена ли текущая задача и готова ли следующая (с большим приоритетом).
-В вытесняющей планировщик смотрит, готова ли более высокоприоритеная задача, если да, он прерывает работе менее приоритетной залачи и вызывает задачу с большим приоритетом.
+В кооперативной многозадачности планировщик смотрит, завершена ли текущая задача и готова ли следующая (с большим приоритетом). +
+В вытесняющей планировщик смотрит, готова ли более высокоприоритеная задача, если да, он прерывает работе менее приоритетной залачи и вызывает задачу с большим приоритетом. +
 Планировщик озаботится тем, чтобы у каждой задачи все сохранялось и запоминалось: текущее положение, стек, переменные, регистры.
