--- a/lab 11/lab11.adoc
+++ b/lab 11/lab11.adoc
@@ -29,15 +29,15 @@
 Написать программу, которая позволяет моргать светодиодами, с использованием операционных систем реального времени.
 --
 === 1. Операционные системы реального времени (OCPB(RTOS))
-Данные системы предназначены для обеспечения интерфейса к ресурсам критических по времени систем реального времени.
-Оснвной задачей в таких ситемах является своевременность (timeliness) выполнения обработки данных.
-Задачей OCPB является обеспечение реакции на определенное действие за отведенный квант времени.
-Для разных задач такой квант может иметь разное значение, например, для обработки. Приблизительное время реакции в зависимости от области применения OCPB может быть следующее:
-математическое моделирование - несколько микросекунд;
-радиолокация - несколько милисекунд;
-складской учет - несколько секунд;
-управление производством - несколько минут.
-Принцип работы и запуска задачи похож на принцип работы прерыванния представлен на рисунке 1.
+Данные системы предназначены для обеспечения интерфейса к ресурсам критических по времени систем реального времени. +
+Оснвной задачей в таких ситемах является своевременность (timeliness) выполнения обработки данных. +
+Задачей OCPB является обеспечение реакции на определенное действие за отведенный квант времени. +
+Для разных задач такой квант может иметь разное значение, например, для обработки. Приблизительное время реакции в зависимости от области применения OCPB может быть следующее: +
+математическое моделирование - несколько микросекунд; +
+радиолокация - несколько милисекунд; +
+складской учет - несколько секунд; +
+управление производством - несколько минут. +
+Принцип работы и запуска задачи похож на принцип работы прерыванния представлен на рисунке 1. +
 
 image::1.jpg[]
 
