--- a/lab 11/lab11.adoc
+++ b/lab 11/lab11.adoc
@@ -49,3 +49,38 @@ image::2.jpg[]
 В кооперативной многозадачности планировщик смотрит, завершена ли текущая задача и готова ли следующая (с большим приоритетом). +
 В вытесняющей планировщик смотрит, готова ли более высокоприоритеная задача, если да, он прерывает работе менее приоритетной залачи и вызывает задачу с большим приоритетом. +
 Планировщик озаботится тем, чтобы у каждой задачи все сохранялось и запоминалось: текущее положение, стек, переменные, регистры.
+
+=== 2. Структура программы в StarUML
+
+Для того что бы написать программу, стоит построить ее структуру в программе StarUML. Ее можно увидеть на рисунке 3.
+
+image::3.jpg[]
+
+===3. Написание кода
+Создали класс MyFirstTask, который наследует класс Thread. У класса Thread есть метод Execute. Переопределили виртуальный метод Execute.
+Программа "myfirsttask.h" представлена ниже.
+
+[source, c]
+#pragma once
+#include "thread.hpp" // for Thread
+
+class MyFirstTask : public OsWrapper:: Thread<200>
+{
+public:
+  void Execute() override;
+};
+
+в программе "myfirsttask.cpp" описали метод Execute. 
+[source, c]
+#include "myfirsttask.h"
+#include "gpiocregisters.hpp" // for GPIOC
+
+void MyFirstTask::Execute()
+{
+  for(;;)
+  {
+    GPIOC::ODR::Toggle(1 << 8);
+    Sleep(1000ms);
+  }
+}
+
