--- a/lab 11/lab11.adoc
+++ b/lab 11/lab11.adoc
@@ -40,11 +40,13 @@
 Принцип работы и запуска задачи похож на принцип работы прерыванния представлен на рисунке 1. +
 
 image::1.jpg[]
+Рисунок 1 +
 
 В ОСРВ вместо прерывний используется задачи, которые вызываются планировщиком каждый раз по прерыванию симного таймера (например в 1 мс) или при непосредственном вызове планировщика.
 Каждый раз планировщик пробегается по списку задач и выбирает задачу готовую к работе (рисунок 2).
 
 image::2.jpg[]
+Рисунок 2 +
 
 В кооперативной многозадачности планировщик смотрит, завершена ли текущая задача и готова ли следующая (с большим приоритетом). +
 В вытесняющей планировщик смотрит, готова ли более высокоприоритеная задача, если да, он прерывает работе менее приоритетной залачи и вызывает задачу с большим приоритетом. +
@@ -55,6 +57,7 @@ image::2.jpg[]
 Для того что бы написать программу, стоит построить ее структуру в программе StarUML. Ее можно увидеть на рисунке 3.
 
 image::3.jpg[]
+Рисунок 3 +
 
 ===3. Написание кода
 Создали класс MyFirstTask, который наследует класс Thread. У класса Thread есть метод Execute. Переопределили виртуальный метод Execute.
