--- a/lab 11/lab11.adoc
+++ b/lab 11/lab11.adoc
@@ -67,18 +67,17 @@ image::3.jpg[]
 [source, c]
 #pragma once
 #include "thread.hpp" // for Thread
-
 class MyFirstTask : public OsWrapper:: Thread<200>
 {
 public:
   void Execute() override;
 };
 
-в программе "myfirsttask.cpp" описали метод Execute. 
+В программе "myfirsttask.cpp" описали метод Execute. 
+
 [source, c]
 #include "myfirsttask.h"
 #include "gpiocregisters.hpp" // for GPIOC
-
 void MyFirstTask::Execute()
 {
   for(;;)
