--- a/lab 11/lab11.adoc
+++ b/lab 11/lab11.adoc
@@ -87,3 +87,181 @@ void MyFirstTask::Execute()
   }
 }
 
+Класс ButtonTask для наследования класса Thread и для кнопки с помощью метода MailBox.
+
+Программа "buttontask.h" представлена ниже.
+
+[source, c]
+#pragma once
+#include "thread.hpp" // for Thread
+#include "event.hpp" // for Event
+#include "mailbox.hpp" //for MailBox
+class ButtonTask: public OsWrapper::Thread<100>
+{
+public:
+  ButtonTask(OsWrapper::MailBox<int, 1>& mailBox) : buttonMailBox(mailBox)
+  {
+  }
+  void Execute() override;  
+private:
+    OsWrapper::MailBox<int, 1>& buttonMailBox;
+    int myMessage = 1;
+};
+
+Создадим класс ButtonTask, который отвечает за выключение светодиода при нажатии кнопки на 250 ms. +
+Программа "buttontask.cpp" представлена ниже.
+
+[source, c]
+#include "buttontask.h"
+#include "gpiocregisters.hpp" //for GPIOC
+ void ButtonTask::Execute()
+  {
+   for(;;)
+    {
+      if(GPIOC::IDR::IDR13::Low::IsSet())
+        {
+         buttonMailBox.Put(myMessage);
+        }
+      Sleep(250ms);
+     }
+  }
+  
+Создадим класс LedTask +
+
+Программа "ledtask.h" представлена ниже.
+[source, c]
+#pragma once
+
+#include "thread.hpp" //for Thread
+#include "event.hpp"  //for Event
+#include "mailbox.hpp" //for MailBox
+
+ class LedTask: public OsWrapper::Thread(100)
+  {
+   public:
+    LedTask(OsWrapper::MailBox<int, 1>& mailBox): buttonMailBox(mailBox)
+     {
+     }
+    void Execute() override;
+   private:
+    OsWrapper::MailBox<int, 1>& buttonMailBox;
+    int myMessage = 1;
+  };
+  
+Создаем класс LedTask. Для описания метода Execute, который проверяет нажатие кнопки, и включает 2 светодиода и через 100 ms усыпляет. +
+
+Программа "ledtask.cpp" представлена ниже.
+
+[source, c]
+#include "gpiocregisters.hpp"
+#include "mailbox.hpp"
+void LedTask::Execute()
+{
+  int resivedMessage;
+  for(;;)
+  {
+    if (ButtonMailBox.Get(resivedMessage, 100) == true)
+    {
+      GPIOC::ODR::ODR9::High::Set();
+      Sleep(100ms);
+    }
+    GPIOC::ODR::ODR9::Low::Set();
+  }
+};
+
+Создаем класс MySecondTask для наследования класса Thread с методом Execute. +
+Программа "mysecondtask.h" представлена ниже.
+
+[source, c]
+#pragma once
+#include "thread.hpp" //for Thread
+class MySecondTask: public OsWrapper::Thread<200>
+{
+public:
+void Execute() override;
+};
+
+Класс MySecondTask описывает метод Execute, который зажигает два светодиода, а потом засыпает на 1500 ms. +
+Код "mysecondtask.cpp" представлен ниже:
+
+[source, c]
+#include "mysecondtask.h"
+#include "gpiocregisters.hpp"
+
+ void MySecondTask::Execute()
+    {
+     for(;;)
+      {
+        GPIOC::ODR::Toggle(1 << 8);
+        GPIOC::ODR::Toggle(1 << 9);
+        SleepUntil(1500ms);
+      }
+    }
+
+Код "main.cpp" представлен ниже:
+
+[source, c]
+#include "rtos.hpp"         // for Rtos
+#include "mailbox.hpp"      // for Mailbox
+#include "event.hpp"        // for Event
+#include "mytask.hpp"       // for MyTask
+#include "led1task.hpp"     // for Led1Task
+#include "myfirsttask.h"    // for MyFirstTask
+#include "buttontask.hpp"   // for ButtonTask
+#include "rccregisters.hpp" // for RCC
+#include "Application/Diagnostic/GlobalStatus.hpp"
+#include <gpioaregisters.hpp>  // for GPIOA
+#include <gpiocregisters.hpp>  // for GPIOC
+#include "myfirsttask.h"
+#include <ledtask.h>
+#include <mysecondtask.h>
+std::uint32_t SystemCoreClock = 16'000'000U;
+extern "C" {
+int __low_level_init(void)
+{
+  //Switch on external 16 MHz oscillator
+  RCC::CR::HSION::On::Set();
+  while (RCC::CR::HSIRDY::NotReady::IsSet())
+  {
+  }
+  //Switch system clock on external oscillator
+  RCC::CFGR::SW::Hsi::Set();
+  while (!RCC::CFGR::SWS::Hsi::IsSet())
+ {
+  }
+  //Switch on clock on PortA and PortC
+  RCC::AHB1ENRPack<
+      RCC::AHB1ENR::GPIOCEN::Enable,
+      RCC::AHB1ENR::GPIOAEN::Enable
+  >::Set();
+  RCC::APB2ENR::SYSCFGEN::Enable::Set();
+  //LED1 on PortA.5, set PortA.5 as output
+  GPIOA::MODER::MODER5::Output::Set();
+  /* LED2 on PortC.9, LED3 on PortC.8, LED4 on PortC.5 so set PortC.5,8,9 as output */
+  GPIOC::MODERPack<
+      GPIOC::MODER::MODER5::Output,
+      GPIOC::MODER::MODER8::Output,
+      GPIOC::MODER::MODER9::Output
+  >::Set();
+  return 1;
+}
+}
+//OsWrapper::Event event{500ms, 1};
+//MyTask myTask(event, UserButton::GetInstance());
+//Led1Task led1Task(event, LedsController::GetInstance());
+OsWrapper::MailBox<int, 1> buttonMailBox;
+ButtonTask buttonTask(buttonMailBox);
+LedTask ledTask(buttonMailBox);
+MyFirstTask myFirstTask;
+MySecondTask mySecondTask;
+int main()
+{
+  using namespace OsWrapper;
+  //Rtos::CreateThread(myTask, "myTask", ThreadPriority::lowest);
+  //Rtos::CreateThread(led1Task, "Led1Task");
+  Rtos::CreateThread(myFirstTask, "MyFirstTask", ThreadPriority::highest);
+  Rtos::CreateThread(buttonTask, "ButtonTask", ThreadPriority::normal);
+  Rtos::CreateThread(ledTask, "LedTask", ThreadPriority::normal);
+  Rtos::Start();
+  return 0;
+}
