--- a/lab7-8-9/отчет.adoc
+++ b/lab7-8-9/отчет.adoc
@@ -22,8 +22,10 @@
 
 
 == Задание к работе
-    а.Сделать программу с использование ООП которая выполняет следующие действия. Доделать дизайн, который позволяет настраивать любой режим моргания светодиодов, с любым количеством светодиодов, привязанных к любым пинам портов.
-    б. Разрисовать архитектуру и дизайн ПО, а именно классы, методы классов и взаимодействия классов в StarUML. Можно сгенерировать заготовки классов прямо из программы. Можно сделать все самим. По архитектуре написать и реализовать классы и потом и логику работы программы. Все это должно быть в отчете.
+    а.Сделать программу с использование ООП которая выполняет следующие действия. Доделать дизайн, который позволяет настраивать любой режим моргания светодиодов,+
+    с любым количеством светодиодов, привязанных к любым пинам портов. +
+    б. Разрисовать архитектуру и дизайн ПО, а именно классы, методы классов и взаимодействия классов в StarUML. +
+    Можно сгенерировать заготовки классов прямо из программы. Можно сделать все самим. По архитектуре написать и реализовать классы и потом и логику работы + программы. Все это должно быть в отчете.
 
 == Создание UML-диаграммы
 Для того, чтобы графически отобразить архитектуру классов, воспользуемся программой StarUML.
