--- a/lab7/lab7.adoc
+++ b/lab7/lab7.adoc
@@ -27,6 +27,15 @@
 Написать программу, которая по отжатию на User Button зажигает все 4 светодиода, а по следующему отжатию тушит все 4 светодиода. Настроить правильно порты.
 --
 === 1. Настройка портов
+
+Алгоритм: +
+Определить какой порт нужно использовать; +
+Подключить нужный порт к источнику частоты через регистр RCC→AHB1ENR; +
+Определить нужна ли какая-то специфическая скорость для конктретного порта и если да, настроить её (через регистр GPIOx_OSPEEDR); +
+Определить нужна ли подтяжка и какой тип выводов надо использовать (GPIOx_PUPDR и GPIOx_OTYPER);+
+Определить какие выводы портов нужно использовать как выход, а какие как вход; +
+Настроить нужные вывода порта на вход или выход (через регистр GPIOE→MODER). 
+
 Для начала подключим порт к шине тактирования:
 
 [source,c]
