--- a/lab7/lab7.adoc
+++ b/lab7/lab7.adoc
@@ -29,12 +29,12 @@
 === 1. Настройка портов
 
 Алгоритм: +
-Определить какой порт нужно использовать; +
-Подключить нужный порт к источнику частоты через регистр RCC→AHB1ENR; +
-Определить нужна ли какая-то специфическая скорость для конктретного порта и если да, настроить её (через регистр GPIOx_OSPEEDR); +
-Определить нужна ли подтяжка и какой тип выводов надо использовать (GPIOx_PUPDR и GPIOx_OTYPER);+
-Определить какие выводы портов нужно использовать как выход, а какие как вход; +
-Настроить нужные вывода порта на вход или выход (через регистр GPIOE→MODER). 
+1.Определить какой порт нужно использовать; +
+2.Подключить нужный порт к источнику частоты через регистр RCC→AHB1ENR; +
+3.Определить нужна ли какая-то специфическая скорость для конктретного порта и если да, настроить её (через регистр GPIOx_OSPEEDR); +
+4.Определить нужна ли подтяжка и какой тип выводов надо использовать (GPIOx_PUPDR и GPIOx_OTYPER);+
+5.Определить какие выводы портов нужно использовать как выход, а какие как вход; 
+6.Настроить нужные вывода порта на вход или выход (через регистр GPIOE→MODER). 
 
 Для начала подключим порт к шине тактирования:
 
