--- a/lab7-8-9/отчет.adoc
+++ b/lab7-8-9/отчет.adoc
@@ -26,23 +26,21 @@
     б. Разрисовать архитектуру и дизайн ПО, а именно классы, методы классов и взаимодействия классов в StarUML. +
     Можно сгенерировать заготовки классов прямо из программы. Можно сделать все самим. По архитектуре написать и реализовать классы и потом и логику работы + программы. Все это должно быть в отчете.
     
+Объектно-ориентированное программирование (ООП) - совокупность принципов, технологий, а также инструментальных средств для создания программных систем на основе архитектуры взаимодействия объектов. +
+
 Основные принципы ООП: абстракция, наследование, инкапсуляция и полиморфизм.
 
-* *Абстракция данных* - выделение значимой информации и исключение из рассмотрения незначимой. В ООП
+. *Абстракция данных* - выделение значимой информации и исключение из рассмотрения незначимой. В ООП
 рассматривают лишь абстракцию данных, подразумевая набор значимых характеристик объекта, доступный остальной программе (пример абстракция Человека, которая характеризуется только двумя параметрами Рост и Вес и цвет глаз).
 
-* *Класс* представляет собой обетракцию совокупности реальных объектов, которые имеют общий набор свойста и обладают одинаковым поведением, Класс является описываемой на языке терминологии исходного кода моделью ещё не существующей сущности (объекта). Фактически он описывает устройство объекта, являясь своего рода чертежом.
+. *Класс* представляет собой обетракцию совокупности реальных объектов, которые имеют общий набор свойста и обладают одинаковым поведением, Класс является описываемой на языке терминологии исходного кода моделью ещё не существующей сущности (объекта). Фактически он описывает устройство объекта, являясь своего рода чертежом.
 
-* *Объект* в контексте ООП рассматривается как экземпляр соответствующего класса. (например, классом может являться
-фрукт, а экземпляр класса фрукт - яблоко). 
+. *Объект* в контексте ООП рассматривается как экземпляр соответствующего класса. (например, классом может являться
+фрукт, а экземпляр класса фрукт - яблоко).
 
-* *Наследование* - свойство системы, позволяющее описать новый класс на основе уже существующего с частично или
+. *Наследование* - свойство системы, позволяющее описать новый класс на основе уже существующего с частично или
 полностью заимствующейся функциональностью. Класс, от которого производится наследование, называется базовым,
-родительским или суперклассом. 
-
-* *Инкапсуляция* - свойство системы, позволяющее объединить данные и методы, работающие с ними, в классе.
-
-* *Полиморфизм* свойство системы, позволяющее использовать объекты с одинаковым интерфейсом без информации о типе и внутренней структуре объекта. Под полиморфизмом  понимается свойство объектов принимать различные внешние формы в зависимости от обстоятельств. 
+родительским или суперклассом.
 
 == Создание UML-диаграммы
 Для того, чтобы графически отобразить архитектуру классов, воспользуемся программой StarUML.
