--- a/lab7-8-9/отчет.adoc
+++ b/lab7-8-9/отчет.adoc
@@ -153,7 +153,8 @@ public:
 }
 ;
 
-Класс All
+Класс All 
+Класс All, отвечает за моргание светодиодов. В нем реализованно 2 операции toggle() и init().
 
 [source,c]
 #pragma once
@@ -174,6 +175,7 @@ public:
 ;
 
 === Класс Chess (режим Шахматы)
+Класс Chess реализован для попеременног моргания 1 и 3, 2 и 4 светодиодов.
 
 [source, c]
 #pragma once
