--- a/lab7-8-9/отчет.adoc
+++ b/lab7-8-9/отчет.adoc
@@ -153,7 +153,7 @@ public:
 }
 ;
 
-Класс All 
+=== Класс All 
 Класс All, отвечает за моргание светодиодов. В нем реализованно 2 операции toggle() и init().
 
 [source,c]
