--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -29,4 +29,8 @@
 --
 Разработка устройства индикации напряжения
 --
-=== 1. Операционные системы реального времени (OCPB(RTOS))
+=== 1. Требования к разработке
+
+--
+images::1.jpg[]
+images::2.jpg[]
