--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -33,3 +33,12 @@
 
 image::1.jpg[]
 image::2.jpg[]
+
+=== 2. Отладочная плата XNUCLLEO-F411RE
+
+Отладочная плата на базе микроконтроллера STM32F411RE, представляет собой гибкую платформу, позволяющую расширять свои функциональные возможности с помощью плат расширения для Arduino и ST Morpho. Плата XNUCLLEO-F411RE изображена на рисунке 1.
+
+image::3.jpg[]
+
+=== 3. Переменный резистор
+Переменный резистор находится на плате расширения
