--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -45,21 +45,21 @@ image::3.jpg[]
 Accessory Shield - это плата расширения совместимая с популярными платформами для разработки электронных приложений, такими как Arduino UNO, Arduino Leonardo, NUCLEO, XNUCLEO и совместимыми. На плате установлены самые популярные дочерние модули, подходящие для реализации большинства задач.
 
 Особенности:
-- Разъем расширения для подключения плат Arduino;
-- Разъем XBee для подключения беспроводных модулей;
-- OLED дисплей 0.96-дюймов с разрешением 128x64 пикселей;
-- RGB светодиод;
-- Зуммер;
-- Потенциометр 10кОм;
-- 3-осевой цифровой акселерометр ADXL345;
--Температурный датчик LM75BDP;
-- Джойстик 5-ти позиционный;
-- Индикатор состояния XBee;
-- Индикатор питания;
-- Кнопка сброса модулей XBee и Arduino;
-- Часы реального времени (RTC);
-- Держатель батареи CR1220 для RTC;
-- Драйвер RGB светодиода;
+- Разъем расширения для подключения плат Arduino; +
+- Разъем XBee для подключения беспроводных модулей; +
+- OLED дисплей 0.96-дюймов с разрешением 128x64 пикселей; +
+- RGB светодиод; +
+- Зуммер; +
+- Потенциометр 10кОм; + 
+- 3-осевой цифровой акселерометр ADXL345; +
+-Температурный датчик LM75BDP; +
+- Джойстик 5-ти позиционный; +
+- Индикатор состояния XBee; +
+- Индикатор питания; +
+- Кнопка сброса модулей XBee и Arduino; +
+- Часы реального времени (RTC); +
+- Держатель батареи CR1220 для RTC; +
+- Драйвер RGB светодиода; +
 - Джампер выбора режима Отладка/Связь.
 
 image::4.jpg[]
