--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -44,7 +44,7 @@ image::3.jpg[]
 
 Accessory Shield - это плата расширения совместимая с популярными платформами для разработки электронных приложений, такими как Arduino UNO, Arduino Leonardo, NUCLEO, XNUCLEO и совместимыми. На плате установлены самые популярные дочерние модули, подходящие для реализации большинства задач.
 
-Особенности:
+Особенности: +
 - Разъем расширения для подключения плат Arduino; +
 - Разъем XBee для подключения беспроводных модулей; +
 - OLED дисплей 0.96-дюймов с разрешением 128x64 пикселей; +
