--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -65,4 +65,6 @@ Accessory Shield - это плата расширения совместимая
 image::4.jpg[]
 
 === 4. Переменный резистор
-Переменный резистор находится на плате расширения
+
+Переменные резисторы — это разновидность резисторов, электрическое сопротивление которых регулируется с помощью механического воздействия на регулировочный орган. +
+Переменный резистор находится на плате расширения Accessories Shield.
