--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -40,7 +40,7 @@ image::2.jpg[]
 
 image::3.jpg[]
 
-=== 3. Плата Accessories Shield
+=== 3. Плата Accessory Shield
 
 Accessory Shield - это плата расширения совместимая с популярными платформами для разработки электронных приложений, такими как Arduino UNO, Arduino Leonardo, NUCLEO, XNUCLEO и совместимыми. На плате установлены самые популярные дочерние модули, подходящие для реализации большинства задач.
 
