--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -67,4 +67,6 @@ image::4.jpg[]
 === 4. Переменный резистор
 
 Переменные резисторы — это разновидность резисторов, электрическое сопротивление которых регулируется с помощью механического воздействия на регулировочный орган. +
-Переменный резистор находится на плате расширения Accessories Shield.
+Переменный резистор находится на плате расширения Accessories Shield с номиналом 10 кОм и подключается к каналу А0 (рисунок 5).
+
+image::5.jpg[]
