--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -70,3 +70,12 @@ image::4.jpg[]
 Переменный резистор находится на плате расширения Accessories Shield с номиналом 10 кОм и подключается к каналу А0 (рисунок 5).
 
 image::5.jpg[]
+
+Резистор - это линейный элмент, поэтому будем использовать линейную функцию следующего вида.
+
+image::6.jpg[]
+
+=== Аналогово-Цифровой преобразовтель
+
+АЦП - устройство, преобразующее входной аналоговый сигнал в дискретный код. Как правило, АЦП — электронное устройство, преобразующее напряжение в двоичный цифровой код. Понятие аналого-цифрового преобразования тесно связано с понятием измерения. Под измерением понимается процесс сравнения измеряемой величины с некоторым эталоном, при аналого-цифровом преобразовании происходит сравнение входной величины с некоторой опорной величиной (как правило, с опорным напряжением). Таким образом, аналого-цифровое преобразование может рассматриваться как измерение значения входного сигнала, и к нему применимы все понятия метрологии, такие, как погрешности измерения.
+АЦП бывают линейными и нелинейными, поскольку резистор является линейным элементом, то мы будем работать линейным АЦП.
