--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -67,13 +67,14 @@ image::4.jpg[]
 === 4. Переменный резистор
 
 Переменные резисторы — это разновидность резисторов, электрическое сопротивление которых регулируется с помощью механического воздействия на регулировочный орган. +
-Переменный резистор находится на плате расширения Accessories Shield с номиналом 10 кОм и подключается к каналу А0 (рисунок 5).
+Переменный резистор находится на плате расширения Accessories Shield с номиналом 10 кОм и подключается к каналу А0 (рисунок 5), дальше подключается к плате XNUCLEO-F411RE через канал PA0 (рисунок 6).
 
 image::5.jpg[]
+image::6.jpg[]
 
 Резистор - это линейный элмент, поэтому будем использовать линейную функцию следующего вида.
 
-image::6.jpg[]
+image::7.jpg[]
 
 === 5. Аналогово-Цифровой преобразовтель
 
