--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -39,6 +39,7 @@ image::2.jpg[]
 Отладочная плата на базе микроконтроллера STM32F411RE, представляет собой гибкую платформу, позволяющую расширять свои функциональные возможности с помощью плат расширения для Arduino и ST Morpho. Плата XNUCLLEO-F411RE изображена на рисунке 1.
 
 image::3.jpg[]
+Рисунок 1 - Плата XNUCLLEO-F411RE
 
 === 3. Плата Accessory Shield
 
@@ -63,14 +64,18 @@ Accessory Shield - это плата расширения совместимая
 - Джампер выбора режима Отладка/Связь.
 
 image::4.jpg[]
+Рисунок 2 - Плата Accessory Shield
 
 === 4. Переменный резистор
 
 Переменные резисторы — это разновидность резисторов, электрическое сопротивление которых регулируется с помощью механического воздействия на регулировочный орган. +
-Переменный резистор находится на плате расширения Accessories Shield с номиналом 10 кОм и подключается к каналу А0 (рисунок 5), дальше подключается к плате XNUCLEO-F411RE через канал PA0 (рисунок 6).
+Переменный резистор находится на плате расширения  Accessory Shield с номиналом 10 кОм и подключается к каналу А0 (рисунок 5), дальше подключается к плате XNUCLEO-F411RE через канал PA0 (рисунок 6).
 
 image::5.jpg[]
+Рисунок 3 - Переменный резистор с платы  Accessory Shield
+
 image::6.jpg[]
+Рисунок 4 - Канал для подключения переменного резистора с платы  Accessory Shield
 
 Резистор - это линейный элмент, поэтому будем использовать линейную функцию следующего вида.
 
