--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -85,3 +85,7 @@ image::7.jpg[]
 
 АЦП - устройство, преобразующее входной аналоговый сигнал в дискретный код. Как правило, АЦП — электронное устройство, преобразующее напряжение в двоичный цифровой код. Понятие аналого-цифрового преобразования тесно связано с понятием измерения. Под измерением понимается процесс сравнения измеряемой величины с некоторым эталоном, при аналого-цифровом преобразовании происходит сравнение входной величины с некоторой опорной величиной (как правило, с опорным напряжением). Таким образом, аналого-цифровое преобразование может рассматриваться как измерение значения входного сигнала, и к нему применимы все понятия метрологии, такие, как погрешности измерения.
 АЦП бывают линейными и нелинейными, поскольку резистор является линейным элементом, то мы будем работать линейным АЦП.
+Разрядность АЦП можно изменять 6, 8, 10, или 12 разрядов.
+Для одного канала можно задать разные режимы:
+** однократно измерить аналоговую величину;
+** запустить канал в режиме непрерывного измерения.
