--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -87,5 +87,5 @@ image::7.jpg[]
 АЦП бывают линейными и нелинейными, поскольку резистор является линейным элементом, то мы будем работать линейным АЦП. + 
 Разрядность АЦП можно изменять 6, 8, 10, или 12 разрядов. +
 Для одного канала можно задать разные режимы: 
-** однократно измерить аналоговую величину;
-** запустить канал в режиме непрерывного измерения.
+- однократно измерить аналоговую величину; + 
+- запустить канал в режиме непрерывного измерения.
