--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -89,4 +89,10 @@ image::7.jpg[]
 Для одного канала можно задать разные режимы: +
 - однократно измерить аналоговую величину; + 
 - запустить канал в режиме непрерывного измерения. +
-АЦП (12 разрядов) микроконтроллера STM32F411 работает по принципу *последовательного приближения*.
+АЦП (12 разрядов) микроконтроллера STM32F411 работает по принципу *последовательного приближения*. +
+* Основные элементы АЦП:
+** Наличие регулярных и инжектированных каналов – отличие только в том, что инжектированные каналы могут писать данные в 4 регистра с 4 каналов сразу, а регулярный только в один регистр
+** 19  аналоговых каналов,  16 из которых которые могут сконфигурированы на работу от внешних источников или 3 внутренних.
+** Внешние каналы поступают на мультиплексор, где выбирается только один из них. Т.е. в один момент времени может быть измерено напряжение только с одного канала.
+** Результат преобразования сохраняется в регистрах данных. Для регулярных каналов это только один 16 битный регистр. Для инжектированных – 4.
+** Запуск преобразования может быть как программным, так и внешним. Внешний запуск может происходить от таймеров или с двух внешних входов.
