--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -110,7 +110,7 @@ image::7.jpg[]
 использовать в режиме FIFO или в прямом режиме. +
 Из справочного руководства в таблице 28, можно увидеть к какому каналу подходит АЦП (рисунок 4).+
 
-image::8.jpg[] +
+image::8.jpg[] 
 Рисунок 4 
 
 
