--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -108,6 +108,11 @@ image::7.jpg[]
 • 8 потоков для каждого контроллера DMA, до 8 каналов (запросов) на поток. +
 • Глубина из четырех слов 32 буфера памяти первого входа и первого выхода (FIFO) на поток, которые можно
 использовать в режиме FIFO или в прямом режиме. +
+Каждая передача DMA состоит из трех операций: +
+ Загрузка данных из регистра периферийного модуля или адреса в памяти через внутренний регистр. +
+ Сохранение данных, загруженных во внутренний регистр в указанное место. Им может быть периферийный модуль или адрес в памяти. +
+ Увеличение адресов источника и приемника при необходимости. +
+
 Из справочного руководства в таблице 28, можно увидеть к какому каналу подходит АЦП (рисунок 4).+
 
 image::8.jpg[] 
