--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -109,9 +109,9 @@ image::7.jpg[]
 • Глубина из четырех слов 32 буфера памяти первого входа и первого выхода (FIFO) на поток, которые можно
 использовать в режиме FIFO или в прямом режиме. +
 Каждая передача DMA состоит из трех операций: +
- Загрузка данных из регистра периферийного модуля или адреса в памяти через внутренний регистр. +
- Сохранение данных, загруженных во внутренний регистр в указанное место. Им может быть периферийный модуль или адрес в памяти. +
- Увеличение адресов источника и приемника при необходимости. +
+1. Загрузка данных из регистра периферийного модуля или адреса в памяти через внутренний регистр. +
+2. Сохранение данных, загруженных во внутренний регистр в указанное место. Им может быть периферийный модуль или адрес в памяти. +
+3. Увеличение адресов источника и приемника при необходимости. +
 
 Из справочного руководства в таблице 28, можно увидеть к какому каналу подходит АЦП (рисунок 4).+
 
